# Law

./: .gitignore  LICENSE  README.md  offline-preview.html
.claude/: launch.json
Admin/: package.json  pnpm-lock.yaml  vite.config.js
Admin/src/: App.jsx  main.jsx
Backend/: .env.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.js
Backend/config/: mongodb.js  redis.js  streamService.js  swagger.js
Backend/controllers/: adminController.js  chatController.js  documentController.js  googleAuthController.js  lawyerController.js  messageContoller.js  userController.js  videoController.js
Backend/docs/: openapi.yaml
Backend/middleware/: authAdmin.js  authLawyer.js  authUser.js  creditManager.js  mongoSanitize.js  multer.js  rateLimiter.js
Backend/models/: appointmentModel.js  conversationModel.js  documentModel.js  lawyerModel.js  userModel.js
Backend/routes/: adminRoute.js  authRoute.js  chatRoutes.js  documentRoute.js  lawyerRoute.js  (+3 more)
Frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
chatbot/: .env.example  README.md  main.py  pyproject.toml  req.txt
chatbot/src/api/: chat.py
chatbot/src/config/: env.py  genai_initialize.py  pinecone_initialize.py
chatbot/src/document_pipeline/: detector.py  pipeline.py
chatbot/src/document_pipeline/extractors/: docx_extractor.py  image_extractor.py  pdf_extractor.py  txt_extractor.py
chatbot/src/embeddings/: create_embeddings.py
chatbot/src/loaders/: loader.py
chatbot/src/prompt_Templates/: chat_prompts.py
chatbot/src/vectorStore_Retrieval/: store_embedding.py
(+133 files in other folders)
