[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.4",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pinecone>=7.3.0",
    "pydantic>=2.13.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
